--- a/login.html
+++ b/login.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="loginCSS.css" type="text/css">
 </head>
 <body>
-    
+    <!--
+    Sources: https://www.w3schools.com/ 
+    https://stackoverflow.com/questions/61582910/how-to-set-an-elements-height-relative-to-the-screen-size
+    --> 
+
+    <div class="loginBox">
+        <h1>Sign in</h1>
+
+        <input type="text" placeholder="username">
+        <br>
+        <input type="password" placeholder="password">
+        <br>
+        <button type="button">Sign in</button>
+    </div>
+
 </body>
 </html>
