added background color and changed font

--- a/login.html
+++ b/login.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <!-- imports css sheet-->
     <link rel="stylesheet" href="loginCSS.css" type="text/css">
 </head>
+
+
 <body>
     <!--
     Sources: https://www.w3schools.com/ 
@@ -15,13 +18,20 @@
     https://stackoverflow.com/questions/37639476/how-to-display-some-asterisks-in-password-field-in-html
     --> 
 
-    <div class="loginBox">
-        <h1>Sign in</h1>
 
+    <!-- creates loginBox class that contains input boxes and sign-in button -->
+    <div class="loginBox">
+        <h1>Sign In</h1>
+
+        <!-- User input box-->
         <input type="text" placeholder="username">
         <br>
+
+        <!--Password box-->
         <input type="password" placeholder="password">
         <br>
+        
+        <!-- Sign in button-->
         <button type="button">Sign in</button>
     </div>
 
